<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicpicker.PaymentActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        android:scaleType="centerCrop" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/buy_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/buy_songs"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/songs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <TextView
            style="@style/songs_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/buy" />
    </LinearLayout>

    <LinearLayout
        style="@style/songs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <TextView
            style="@style/songs_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/buy" />
    </LinearLayout>

    <LinearLayout
        style="@style/songs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">

        <TextView
            style="@style/songs_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/buy" />
    </LinearLayout>
</RelativeLayout>
